# mxnet

./: .bumpversion.cfg  .gitignore  .travis.yml  Gopkg.toml  Makefile  README.md  azure-pipelines.yml  builtin_models_static.go  generate.go  glide.yaml  go.mod  go.sum  graph.go  graph_test.go  init.go  model_test.go  mxnet.pb.go  mxnet.proto  mxnetpb_test.go  register.go  utils.go  version.go
_fixtures/: RN101-5k500-symbol.json  vgg19-symbol.json
agent/: agent.go  agent_test.go  init.go
builtin_models/: AlexNet.yml  BVLC-AlexNet.yml  BVLC-GoogLeNet.yml  BVLC-Reference-CaffeNet.yml  BVLC-Reference-RCNN-ILSVRC13.yml  CIFAR_ResNet110_v1.yml  CIFAR_ResNet110_v2.yml  CIFAR_ResNet20_v1.yml  CIFAR_ResNet20_v2.yml  CIFAR_ResNet56_v1.yml  CIFAR_ResNet56_v2.yml  CIFAR_ResNext29_16x64d.yml  CIFAR_ResNext29_32x4d.yml  CIFAR_WideResNet16_10.yml  CIFAR_WideResNet28_10.yml  CIFAR_WideResNet40_8.yml  DPN68.yml  DPN92.yml  DarkNet53.yml  DenseNet-1.2.yml  DenseNet121 .yml  DenseNet161.yml  DenseNet169.yml  DenseNet201.yml  Faster_RCNN_ResNet50_v1b_VOC.yml  Inception-21k.yml  Inception-BN.yml  Inception-ResNet-v2.yml  Inception-v3.yml  Inception-v4.yml  InceptionBN-21K.yml  (+116 more)
mxnet-agent/: .gitignore  BUILD.bazel  WORKSPACE  init.go  main.go
mxnet-agent/dockerfiles/: Dockerfile.amd64_cpu  Dockerfile.amd64_gpu  Dockerfile.amd64_gpu_ngc  Dockerfile.ppc64le_cpu  Dockerfile.ppc64le_gpu  Makefile
mxnet-agent/scripts/: benchmarkModeEnable.sh  cpu_all.sh  cpu_analysis.sh  cpu_eval_ab.sh  cpu_eval_fb.sh  evaluate_docker.sh  gpu_all.sh  gpu_analysis.sh  gpu_eval_ab.sh  gpu_eval_fb.sh
(+91 files in other folders)
