load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/rai-project/config",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/rai-project/mxnet/mxnet-agent",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_rai_project_dlframework//framework/cmd/server:go_default_library",
        "@com_github_rai_project_mxnet//:go_default_library",
        "@com_github_rai_project_mxnet//predict:go_default_library",
    ],
)

go_binary(
    name = "mxnet-agent",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
